Finish implementing the Maps JavaScript API into portfolio as a Where's Waldo game

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -95,6 +95,14 @@ html, body {
     height: 500px;
 }
 
+#info-window {
+    color: black;
+}
+
+#info-window a {
+    color: blue;
+}
+
 /* COMMENTS */
 
 #comments-container {
