Add chart for distribution of sentiment scores and a timeline chart on about page

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -213,3 +213,8 @@ input, select, textarea {
 #comments-container li .score {
     float: right;
 }
+
+/* CHARTS */
+#chart-div-timeline {
+    width: 100%;
+}
